--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "lucide-angular": "^0.460.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
